Database architecture is changed -> changes in entities and ddl, dml-files are done (+ proxy is added). Repository pattern is realized!